fotografia, orden assets

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <a href="#main" class="btnNav" id="productos">Productos</a>
             <a href="#main" class="btnNav" id="fotografia">Fotografia</a>
             <a href="#main" class="btnNav" id="acercaDeMi">Acerca de mi</a>
-            <a href="https://wa.me/541131807292?text=Quiero%20info%20por%20favor" class="btnNav"><img
-                    src="./svg/whatsapp.svg" alt="icono de Whatsapp" width="13px"></a>
+            <a href="https://wa.me/541131807292?text=Hola!%20Visité%20tu%20página%20web%20y%20quiero%20más%20información."
+                class="btnNav"><img src="./svg/whatsapp.svg" alt="icono de Whatsapp" width="13px"></a>
         </nav>
 
-        <h1 class="title">ClabbDesign</h1>
+        <h1 class="title">Clabbdesign</h1>
 
         <div class="containerPortada">
             <img class="portada" src="./img/portada.jfif" alt="portada">
@@ -42,7 +42,7 @@
                 <div class="presentacion" id="presentacion">
 
                     <a href="#main">
-                        <img class="imagenCentral" id="galeria" src="./img/mesa1.jfif">
+                        <img class="imagenCentral" id="galeria" src="./img/productos/mesa1.jfif">
                     </a>
 
                 </div>
