--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
                 <div class="links">
                     <a href="https://www.instagram.com/clabbdesign/"><img src="./svg/instagram.svg"
                             alt="icono de Whatsapp" width="20px">@clabbdesign</a>
-                    <a href="https://wa.me/541131807292?text=Quiero%20info%20por%20favor"><img src="./svg/whatsapp.svg"
-                            alt="icono de Whatsapp" width="13px">+54 9 11 31807292</a>
+                    <a
+                        href="https://wa.me/541131807292?text=Hola!%20Visité%20tu%20página%20web%20y%20quiero%20más%20información."><img
+                            src="./svg/whatsapp.svg" alt="icono de Whatsapp" width="13px">+54 9 11 31807292</a>
                 </div>
             </div>
             <hr>
