--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
             <a href="https://wa.me/541131807292?text=Hola!%20Visité%20tu%20página%20web%20y%20quiero%20más%20información."
                 class="btnNav"><img src="./svg/whatsapp.svg" alt="icono de Whatsapp" width="13px"></a>
         </nav>
-
-        <h1 class="title">Clabbdesign</h1>
-
+        <div class="title">
+            <h1>Clabb</h1>
+            <h1>design</h1>
+        </div>
         <div class="containerPortada">
             <img class="portada" src="./img/portada.jfif" alt="portada">
         </div>
